Changelog
=========


2.5 (unreleased)
------------------

- Statesyncer: Update the localroles on the remote task, when reponsible has changed.
  Issue #1665 Erledigen von mandantenuebergreifenden Aufgaben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1665
  [phgross]

- Fixed error in NoCheckedoutDocsValidator, works now also with None as value.
  Issue #1651 NoCheckedoutDocsValidator wirft Fehler, wenn kein Wert uebergeben wird.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1651/view
  [phgross]

- Fixed request getter in accept_forwarding process.
  [phgross]

- Added french translations of task types.
  [phgross]


2.4 (2012-07-20)
----------------

- Added NoCheckedOutDocs also to the task add form.
  Issue #1516 Problem "Ueberweisen von ausgecheckten Dokumenten"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1516
  [phgross]

- Adjust document delivering: add answer prefix to the document titles.
  Issue #1479 Titel eines zurueckgelieferten Dokuments bei mandantenuebergreifenden Aufgaben
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1479
  [phgross]

- Implements CustomInitialVersionMessage context manager, and customize inital message.
  Issue #1494 Mandantenuebergreifende ZA: Initialversion ersetzten mit spezifischerem Kommentar
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1494
  [phgross]

- Added reassign support to the statesyncer.
  Issue #1560 mandantenuebergreifende ZA: Synchronisation von Neu zuweisen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1560/
  [phgross]

- Added NoCheckedOutDocs Validator to the CompleteTaskSuccessor form.
  Issue #1516 Problem "Ueberweisen von ausgecheckten Dokumenten"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1516
  [phgross]
